[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iplocalscan"
dynamic = ["version"]
description = "Production-oriented network scanner desktop app scaffold for administrators."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.7,<7",
]

[project.scripts]
iplocalscan = "iplocalscan.app:main"

[tool.setuptools.packages.find]
include = ["iplocalscan*"]

[tool.setuptools.dynamic]
version = {attr = "iplocalscan.version.__version__"}

[tool.setuptools.package-data]
"iplocalscan.services.data" = ["*.json"]
